css/include/initial.css
/* ... */
#skip-to-content-link:focus {
    top: 0;
    transition:
        top 0.1s ease-in;
}


/***********/
/* SIDEBAR */
/***********/

#sidebar {
    display: flex;
    justify-content: center;
}
@media all and (min-width: 650px) {
    #sidebar {
        margin: 0.5em 0 0.25em 0;
    }
}
@media all and (max-width: 649px) {
    #sidebar {
        margin: 1em 0 0.5em 0;
    }
}

#sidebar a {
    display: block;
    border: 1px dotted currentColor;
    text-align: center;
    margin: 1px 0 1px 2px;
}
@media all and (min-width: 650px) {
    #sidebar a {
        color: var(--GW-nav-header-link-color);
    }
    #sidebar a:hover {
        color: var(--GW-nav-header-link-hover-color);
    }
}

#sidebar a#logo {
    display: flex;
    margin: 1px 0;
}
@media all and (max-width: 649px) {
    #sidebar a#logo {
        padding: 0.5em 0.375em;
    }
    #sidebar a#logo svg {
        width: 2.5em;
    }
}
@media all and (min-width: 650px) {
    @media all and (max-width: 1179px) {
        #sidebar a#logo {
            padding: 0.25em 0.375em;
        }
        #sidebar a#logo svg {
            width: 1em;
        }
    }
    @media all and (min-width: 1180px) {
        #sidebar a#logo {
            position: absolute;
            right: 100%;
            margin: 0 0.75em 0 0;
            padding: 0.125em;
            border: none;
            opacity: 0.5;
        }
        #sidebar a#logo:hover {
            opacity: 1.0;
        }
        #sidebar a#logo svg {
            width: 4em;
        }
    }
}

#sidebar-links {
    display: flex;
    flex-flow: row wrap;
    flex: 1 1 100%;
    margin: 0;
}
#sidebar-links a {
    flex: 1 1 auto;
    padding: 0.25em 0.75em;
}

@media all and (max-width: 649px) {
    #sidebar-links a {
        font-variant: small-caps;
    }
    #sidebar-links a:nth-child(1),
    #sidebar-links a:nth-child(2),
    #sidebar-links a:nth-child(3) {
        min-width: 25%;
    }
    #sidebar-links a.patreon {
        display: none;
    }
}
@media all and (min-width: 650px) {
    #sidebar-links a {
        text-transform: uppercase;
        font-weight: 600;
    }
}
@media all and (min-width: 1180px) {
    #sidebar-links a:first-child {
        margin-left: 0;
    }
}


/***************/
/* PAGE HEADER */
/***************/

header {
    overflow: auto;
}
@media all and (max-width: 649px) {
    header {
        padding: 0 1em;
    }
}
@media all and (min-width: 650px) {
    header {
        padding: 0 2em;
    }
}

header h1 {
    margin: 0.75em 0;
    text-align: center;
    text-transform: none;
    font-variant: small-caps;
    font-size: 2.5em;
    line-height: 1.15;
    font-weight: 600;
    letter-spacing: -1px;
}
@media all and (max-width: 649px) {
    header h1 {
        font-size: 2em;
    }
}

/*	Source Serif Pro has no italic small caps, sadly.
 */
header h1 em {
	font-variant: normal;
}

/***********************/
/* PAGE METADATA BLOCK */
/***********************/

#page-metadata {
    margin: 0 0 2rem 0;
    line-height: 1.5;
}

/* Override normal handling of italics: before, we wrapped descriptions in `<em>`; however, they compile to HTML which can contain italics of their own (eg. book titles). This causes HTML Tidy to warn about nested italics (which is valid HTML but *usually* means you've made an error - this often triggers when I mess up bolding, for example, like on /GPT-3 ). So we removed the wrapper in favor of the above `font-style: italic`. However, now the titles don't unitalicize automatically like they would for nested italics! So we force italicized titles back to normal Roman font to match the expected typographic convention. */
#page-description {
    display: block;
    font-style: italic;
    text-align: justify;
}
/*  The following is needed only due to the .justified-not no-hyphens styles;
    when the A/B test of justification & indentation is done, remove this also.
        —SA 2022-11-20
 */
#page-description p {
    -webkit-hyphens: auto;
    hyphens: auto;
}
#page-description em {
    font-style: normal;
}

#page-metadata > .link-tags {
    margin: 0 auto 0.25em auto;
}
#page-metadata > .link-tags a {
    white-space: nowrap;
}
#page-metadata > .link-tags a:nth-child(n+2) {
    margin: 0 0.05em 0 0.1em;
}

#page-metadata > .link-tags,
#page-metadata-block {
	-webkit-hyphens: none;
    hyphens: none;
}

#page-metadata-block > span {
    white-space: nowrap;
}
#page-metadata-block > span#page-author {
    white-space: normal;
}

#page-source a {
    font-variant-numeric: oldstyle-nums;
}

/*  Interpunct separators for the metadata fields; looks nicer than semicolons
    or slashes
 */
#page-metadata-block > span:not(:last-child)::after {
    content: "\00B7"; /* interpunct MIDDLE DOT (U+00B7) '·' */
    margin: 0 0.35em 0 0.65em;
}

@media all and (min-width: 650px) {
    #page-metadata {
        overflow: auto;
        font-size: calc((19/20) * var(--GW-body-text-font-size));
    }
    #page-description {
        margin: 0 auto 0.75em auto;
        -webkit-hyphens: none;
        hyphens: none;
    }
    #page-metadata-block,
    #page-metadata > .link-tags {
        font-size: calc((18/20) * var(--GW-body-text-font-size));
    }
}
/* ... */

